✨ Update: image imports to use direct paths and improve code readability across multiple components.

--- a/src/components/pages/about-us/VissionMission.astro
+++ b/src/components/pages/about-us/VissionMission.astro
@@ -1,19 +1,19 @@
 ---
-import BackgroundMobile from "../../../../public/pages/about-us/vission-mission/VISION-MISSION-MOBILE.webp";
-import Background from "../../../../public/pages/about-us/vission-mission/VISION-MISSION.webp";
+const BackgroundMobile ="/pages/about-us/vission-mission/VISION-MISSION-MOBILE.webp";
+const Background ="/pages/about-us/vission-mission/VISION-MISSION.webp";
 ---
 
 <>
   <section
     class="bg-cover bg-center px-7 block md:hidden min-h-screen -mt-3"
-    style={`background-image: url(${BackgroundMobile.src})`}
+    style={`background-image: url(${BackgroundMobile})`}
   >
     <div class=""></div>
   </section>
 
   <section
     class="bg-cover bg-top h-auto min-h-screen hidden md:block"
-    style={`background-image: url(${Background.src})`}
+    style={`background-image: url(${Background})`}
   >
     <div class="pt-[5%] pb-[56%]"></div>
   </section>
