--- a/src/components/pages/about-us/CiciMandarinTeam.astro
+++ b/src/components/pages/about-us/CiciMandarinTeam.astro
@@ -1,15 +1,15 @@
 ---
-import BackgroundMobile from "../../../../public/pages/about-us/cici-mandarin-team/OLD-PAPER-MOBILE.webp";
-import Background from "../../../../public/pages/about-us/cici-mandarin-team/OLD-PAPER-WEB.webp";
+const BackgroundMobile = "/pages/about-us/cici-mandarin-team/OLD-PAPER-MOBILE.webp";
+const Background = "/pages/about-us/cici-mandarin-team/OLD-PAPER-WEB.webp";
 
-import ImageMobile from "../../../../public/pages/about-us/cici-mandarin-team/image-mobile.webp";
-import Imageweb from "../../../../public/pages/about-us/cici-mandarin-team/image-web.png";
+const ImageMobile = "/pages/about-us/cici-mandarin-team/image-mobile.webp";
+const Imageweb = "/pages/about-us/cici-mandarin-team/image-web.png";
 ---
 
 <>
   <section
     class="bg-cover bg-center pt-14 pb-10 px-7 block md:hidden"
-    style={`background-image: url(${BackgroundMobile.src})`}
+    style={`background-image: url(${BackgroundMobile})`}
   >
     <div class="flex flex-col gap-3 justify-center items-center">
       <div class="flex flex-col justify-center items-center gap-4 pt-5">
@@ -37,14 +37,14 @@ import Imageweb from "../../../../public/pages/about-us/cici-mandarin-team/image
       </div>
 
       <div class="px-5">
-        <img src={ImageMobile.src} alt="" />
+        <img src={ImageMobile} alt="" />
       </div>
     </div>
   </section>
 
   <section
     class="hidden md:block bg-cover bg-center pt-14 pb-10 px-7"
-    style={`background-image: url(${Background.src})`}
+    style={`background-image: url(${Background})`}
   >
     <div class="flex flex-col gap-3 justify-center items-center">
       <div class="flex flex-col justify-center items-center gap-8 pt-10">
@@ -54,7 +54,7 @@ import Imageweb from "../../../../public/pages/about-us/cici-mandarin-team/image
           CICI MANDARIN TEAM
         </div>
         <div class="px-20">
-          <img src={Imageweb.src} alt="" />
+          <img src={Imageweb} alt="" />
         </div>
       </div>
     </div>
