--- a/src/components/pages/contact-us/Faq.astro
+++ b/src/components/pages/contact-us/Faq.astro
@@ -1,14 +1,14 @@
 ---
-import BackgroundMobile from "../../../../public/pages/contact-us/faq/bg-mobile.webp";
-import BackgroundWeb from "../../../../public/pages/contact-us/faq/bg-faq-web.webp";
-import IconTextTitle from "../../../../public/pages/contact-us/faq/THEME.webp";
-import IconChatImage from "../../../../public/pages/contact-us/faq/LANGUAGE-COURSE.png";
+const BackgroundMobile ="/pages/contact-us/faq/bg-mobile.webp";
+const BackgroundWeb ="/pages/contact-us/faq/bg-faq-web.webp";
+const IconTextTitle ="/pages/contact-us/faq/THEME.webp";
+const IconChatImage ="/pages/contact-us/faq/LANGUAGE-COURSE.png";
 ---
 
 <>
   <section
     class="bg-cover bg-top px-7 block md:hidden"
-    style={`background-image: url(${BackgroundMobile.src})`}
+    style={`background-image: url(${BackgroundMobile})`}
   >
     <div class="flex flex-col gap-8 pt-[9%]">
       <!-- judul -->
@@ -21,11 +21,11 @@ import IconChatImage from "../../../../public/pages/contact-us/faq/LANGUAGE-COUR
           <span> ASKED QUESTIONS </span>
         </div>
         <div class="flex justify-center">
-          <img src={IconTextTitle.src} alt="" class="w-[50%]" />
+          <img src={IconTextTitle} alt="" class="w-[50%]" />
         </div>
       </div>
       <div class="flex justify-center">
-        <img src={IconChatImage.src} alt="" />
+        <img src={IconChatImage} alt="" />
       </div>
     </div>
 
@@ -35,7 +35,7 @@ import IconChatImage from "../../../../public/pages/contact-us/faq/LANGUAGE-COUR
 
    <section
     class="bg-cover bg-top h-auto min-h-screen hidden md:block"
-    style={`background-image: url(${BackgroundWeb.src})`}
+    style={`background-image: url(${BackgroundWeb})`}
   >
     <div class="pb-[46%]"></div>
   </section>
