--- a/src/components/pages/landing-pages/OurService.astro
+++ b/src/components/pages/landing-pages/OurService.astro
@@ -1,16 +1,16 @@
 ---
-import Background from "../../../../public/pages/landing-pages/our-service/Maskgroup.png";
-import BackgroundWeb from "../../../../public/pages/landing-pages/our-service/OUR-SERVICES.webp";
-import CardOne from "../../../../public/pages/landing-pages/our-service/1.png";
-import CardTwo from "../../../../public/pages/landing-pages/our-service/2.png";
-import CardThree from "../../../../public/pages/landing-pages/our-service/3.png";
-import CardFour from "../../../../public/pages/landing-pages/our-service/4.png";
+const Background = "/pages/landing-pages/our-service/Maskgroup.png";
+const BackgroundWeb = "/pages/landing-pages/our-service/OUR-SERVICES.webp";
+const CardOne = "/pages/landing-pages/our-service/1.png";
+const CardTwo = "/pages/landing-pages/our-service/2.png";
+const CardThree = "/pages/landing-pages/our-service/3.png";
+const CardFour = "/pages/landing-pages/our-service/4.png";
 ---
 
 <>
   <section
     class="bg-cover bg-left px-7 py-12 -mt-[12%] block md:hidden"
-    style={`background-image: url(${Background.src})`}
+    style={`background-image: url(${Background})`}
   >
     <div class="flex flex-col justify-center items-center gap-8">
       <div class="">
@@ -19,17 +19,17 @@ import CardFour from "../../../../public/pages/landing-pages/our-service/4.png";
         >
       </div>
       <div class="grid grid-cols-2 grid-rows-2 gap-2">
-        <img src={CardOne.src} alt="CardOne" class="w-52" />
-        <img src={CardTwo.src} alt="CardTwo" class="w-52" />
-        <img src={CardThree.src} alt="CardThree" class="w-52" />
-        <img src={CardFour.src} alt="CardFour" class="w-52" />
+        <img src={CardOne} alt="CardOne" class="w-52" />
+        <img src={CardTwo} alt="CardTwo" class="w-52" />
+        <img src={CardThree} alt="CardThree" class="w-52" />
+        <img src={CardFour} alt="CardFour" class="w-52" />
       </div>
     </div>
   </section>
 
   <section
   class="bg-cover bg-top -mt-[12%] h-auto min-h-screen hidden md:block"
-  style={`background-image: url(${BackgroundWeb.src})`}
+  style={`background-image: url(${BackgroundWeb})`}
 >
   <div class="pb-[58%]"></div> <!-- Sesuaikan persentase dengan aspect ratio gambar -->
 </section>
