Refactor SuccesStories component for improved responsiveness and layout adjustments; update Welcome and WhyUs components for better styling and alignment.

--- a/src/components/pages/landing-pages/Welcome.astro
+++ b/src/components/pages/landing-pages/Welcome.astro
@@ -14,7 +14,7 @@ const PictureMobile ="/pages/landing-pages/welcome/PIC-mobile.webp";
 >
   <div class="flex flex-col gap-3">
     <div>
-      <div class="flex justify-center">
+      <div class="flex justify-center mb-2">
         <img src={TextWelcome} alt="Welcome" />
       </div>
       <div class="flex justify-center">
@@ -22,9 +22,9 @@ const PictureMobile ="/pages/landing-pages/welcome/PIC-mobile.webp";
           <span class="text-white font-extralight">
             Your All-in-One Gateway to China:
           </span>
-          <span class="text-white font-bold"> Study, Travel, Work </span>
-          <button class="bg-[#FFBC2D] py-1 px-3 rounded-full">
-            <span class="text-[#F03C0B] font-bold"> KNOW US MORE ! </span>
+          <span class="text-white font-bold mb-2"> Study, Travel, Work </span>
+          <button class="bg-[#FFBC2D] py-1 px-2 rounded-full flex justify-center items-center">
+            <span class="text-[#F03C0B] text-xs font-bold"> KNOW US MORE! </span>
           </button>
         </div>
       </div>
