⚡fix: button not simetric

--- a/src/components/pages/landing-pages/Welcome.astro
+++ b/src/components/pages/landing-pages/Welcome.astro
@@ -39,7 +39,7 @@ const PictureMobile ="/pages/landing-pages/welcome/PIC-mobile.webp";
 
 <section
   class="bg-cover bg-top px-7 hidden md:block h-screen"
-  style={`background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(${Background})`}
+  style={`background-image: url(${Background})`}
 >
   <div class="flex justify-center items-center h-full px-20">
     <img src={WelcomeImage} alt="">
