--- a/src/components/pages/services/cici-study-abroad-expert/Roadmap.astro
+++ b/src/components/pages/services/cici-study-abroad-expert/Roadmap.astro
@@ -6,7 +6,7 @@ const bgMobile = "/pages/services/cici-study-abroad-expert/roadmap/bg-mobile.web
 <section class="relative w-full overflow-hidden -mt-6 -z-3">
   <picture>
     <source media="(min-width: 640px)" srcset={background} />
-    <img src={bgMobile} alt="Roadmap background" class="w-full h-auto block" />
+    <img src={bgMobile} alt="Roadmap background" class="w-full h-auto object-cover object-center" />
   </picture>
 
   <div class="absolute inset-0 px-4 md:px-8 lg:px-16 py-8 md:py-12">
