--- a/src/components/pages/services/cici-language-course-expert/Hero.astro
+++ b/src/components/pages/services/cici-language-course-expert/Hero.astro
@@ -10,7 +10,7 @@ const bgMobile = "/pages/services/cici-language-course-expert/hero/bg-mobile.web
   <div class="absolute inset-x-0 bottom-0 h-32 bg-linear-to-t from-black/30 to-transparent pointer-events-none z-10"></div>
 
   <div class="mx-auto max-w-7xl px-6 py-16 md:py-24 flex flex-col items-center md:items-end justify-center min-h-[70vh] relative z-20">
-    <div class="relative w-full max-w-[880px] pt-20 md:pt-20 transform translate-x-0 md:translate-x-16 mt-8 md:mt-16">
+    <div class="relative w-full max-w-[880px] pt-20 md:pt-20 transform translate-x-0 md:translate-x-16 -mt-24 md:mt-16">
       <h1 class="absolute top-6 sm:top-10 md:top-12 left-1/2 -translate-x-1/2 z-10 w-full text-center font-mochiy-pop-one text-2xl sm:text-3xl md:text-4xl leading-relaxed text-outline-red">
         CICI LANGUAGE
         <br class="hidden sm:block" />
