⚡fix: button join with us

--- a/src/components/pages/about-us/Milestone.astro
+++ b/src/components/pages/about-us/Milestone.astro
@@ -1,14 +1,14 @@
 ---
-const BackgroundMobile ="/pages/about-us/milestone/MILESTONE.webp";
-const Background ="/pages/about-us/milestone/BG.webp";
-const BodyImage ="/pages/about-us/milestone/BODY.png";
-const BodyImageWeb ="/pages/about-us/milestone/BODY-web.png";
-const HeadImage ="/pages/about-us/milestone/HEAD.png";
-const HeadImageWeb ="/pages/about-us/milestone/HEAD-web.png";
-const TextMobile ="/pages/about-us/milestone/text-mobile.webp";
-const TextWeb ="/pages/about-us/milestone/text-web.png";
-const NumberImage ="/pages/about-us/milestone/NUMBERS-MOBILE.png";
-const NumberImageWeb ="/pages/about-us/milestone/NUMBERS-WEB.webp";
+const BackgroundMobile = "/pages/about-us/milestone/MILESTONE.webp";
+const Background = "/pages/about-us/milestone/BG.webp";
+const BodyImage = "/pages/about-us/milestone/BODY.png";
+const BodyImageWeb = "/pages/about-us/milestone/BODY-web.png";
+const HeadImage = "/pages/about-us/milestone/HEAD.png";
+const HeadImageWeb = "/pages/about-us/milestone/HEAD-web.png";
+const TextMobile = "/pages/about-us/milestone/text-mobile.webp";
+const TextWeb = "/pages/about-us/milestone/text-web.png";
+const NumberImage = "/pages/about-us/milestone/NUMBERS-MOBILE.png";
+const NumberImageWeb = "/pages/about-us/milestone/NUMBERS-WEB.webp";
 ---
 
 <>
@@ -31,7 +31,10 @@ const NumberImageWeb ="/pages/about-us/milestone/NUMBERS-WEB.webp";
           <img src={TextMobile} alt="" />
         </>
         <div class="flex justify-center">
-          <button class="bg-[#FFBC2D] py-1 px-3 rounded-lg">
+          <button
+            class="bg-[#FFBC2D] py-1 px-3 rounded-lg"
+            onclick="window.location.href = 'https://wa.me/6287853909383','_blank', 'noopener,noreferrer'"
+          >
             <span class="text-[#F03C0B] font-bold"> JOIN US NOW! </span>
           </button>
         </div>
@@ -60,7 +63,10 @@ const NumberImageWeb ="/pages/about-us/milestone/NUMBERS-WEB.webp";
           <img src={TextWeb} alt="" class="w-4xl" />
         </div>
         <div class="flex justify-center">
-          <button class="bg-[#FFBC2D] py-1 px-3 rounded-lg">
+          <button
+            onclick="window.location.href = 'https://wa.me/6287853909383','_blank', 'noopener,noreferrer'"
+            class="bg-[#FFBC2D] py-1 px-3 rounded-lg cursor-pointer"
+          >
             <span class="text-[#F03C0B] font-bold"> JOIN US NOW! </span>
           </button>
         </div>
