⚡fix: bug in home

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,6 @@ import ModalPopUp from "../components/pages/pop-up/ModalPopUp.tsx";
   <AddItionalProServices />
   <WhyUs client:load />
   <SuccesStories client:load />
-  <LearnCulture />
+  <LearnCulture client:load/>
   <HottestNews />
 </Layout>
