--- a/src/components/pages/landing-pages/Welcome.astro
+++ b/src/components/pages/landing-pages/Welcome.astro
@@ -25,6 +25,7 @@ const PictureMobile = "/pages/landing-pages/welcome/PIC-mobile.webp";
             </span>
             <span class="text-white font-bold mb-2"> Study, Travel, Work </span>
             <button
+              onclick="window.location.href = '/about-us' "
               class="bg-[#FFBC2D] py-1 px-3 rounded-full flex justify-center items-center cursor-pointer"
             >
               <span class="text-[#F03C0B] text-xs font-bold">
@@ -54,7 +55,10 @@ const PictureMobile = "/pages/landing-pages/welcome/PIC-mobile.webp";
       <img src={WelcomeImage} alt="" />
     </div>
 
-    <div onclick="window.location.href = '/about-us' " class="absolute left-[6.5%] 2xl:bottom-[35.3%] bottom-[36%] 2xl:left-[5%] cursor-pointer rounded-lg px-[5.8%] py-[1.3%]">
+    <div
+      onclick="window.location.href = '/about-us' "
+      class="absolute left-[6.5%] 2xl:bottom-[35.3%] bottom-[36%] 2xl:left-[5%] cursor-pointer rounded-lg px-[5.8%] py-[1.3%]"
+    >
     </div>
   </section>
 </>
