refactor style pages services

--- a/src/components/pages/services/cici-tour-travel-expert/Explorer.astro
+++ b/src/components/pages/services/cici-tour-travel-expert/Explorer.astro
@@ -1,6 +1,7 @@
 ---
 const background = "/pages/services/cici-tour-travel-expert/explorer/background.webp";
 const bgMobile = "/pages/services/cici-tour-travel-expert/explorer/bg-mobile.webp";
+const handPhone = "/pages/services/cici-tour-travel-expert/explorer/hand-phone.webp";
 ---
 
 <section class="relative w-full overflow-hidden -mt-6 -z-4">
