--- a/src/components/pages/services/cici-tour-travel-expert/Roadmap.astro
+++ b/src/components/pages/services/cici-tour-travel-expert/Roadmap.astro
@@ -1,15 +1,6 @@
 ---
 const background = "/pages/services/cici-tour-travel-expert/roadmap/background.webp";
-const bgMobile = "/pages/services/cici-tour-travel-expert/roadmap/bg-mobile.webp";
-const handPhone = "/pages/services/cici-tour-travel-expert/roadmap/hand-phone.webp";
-
-const video1 = "/pages/landing-pages/why-us/1.mp4"
-const video2 = "/pages/landing-pages/why-us/2.mp4"
-const video3 = "/pages/landing-pages/why-us/3.mp4"
-const video4 = "/pages/landing-pages/why-us/4.mp4"
-const video5 = "/pages/landing-pages/why-us/5.mp4"
-const video6 = "/pages/landing-pages/why-us/6.mp4"
-const video7 = "/pages/landing-pages/why-us/7.mp4"
+const bgMobile = "/pages/services/cici-tour-travel-expert/roadmap/bg-mobile.png"
 ---
 
 <section class="relative w-full overflow-hidden -mt-6 -z-3">
