--- a/src/components/pages/services/cici-study-abroad-expert/Roadmap.astro
+++ b/src/components/pages/services/cici-study-abroad-expert/Roadmap.astro
@@ -1,6 +1,6 @@
 ---
 const background = "/pages/services/cici-study-abroad-expert/roadmap/background.webp";
-const bgMobile = "/pages/services/cici-study-abroad-expert/roadmap/bg-mobile.webp";
+const bgMobile = "/pages/services/cici-study-abroad-expert/roadmap/bg-mobile.png";
 ---
 
 <section class="relative w-full overflow-hidden -mt-6 -z-3">
