--- a/src/components/pages/services/cici-tour-travel-expert/Explorer.astro
+++ b/src/components/pages/services/cici-tour-travel-expert/Explorer.astro
@@ -22,9 +22,9 @@ const videos = [video1, video2, video3, video5, video6, video7];
   <div class="absolute inset-0 px-2 md:px-4 lg:px-8 flex items-center justify-center md:items-center md:justify-center">
     <div class="flex flex-col md:flex-row items-center justify-center gap-8 md:gap-12 w-full max-w-6xl">
 
-      <div class="relative w-full max-w-md md:max-w-lg mt-42 md:mt-3 md:ml-98.5">
+      <div class="relative w-full max-w-md md:max-w-lg mt-42 md:mt-0 md:ml-98.5">
         <div class="relative w-full" style="padding-top: 180%;">
-          <div id="video-container" class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[65%] h-[68%] overflow-y-scroll snap-y snap-mandatory rounded-3xl scrollbar-hide z-10">
+          <div id="video-container" class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[60%] h-[68%] md:h-[65%] overflow-y-scroll snap-y snap-mandatory rounded-3xl scrollbar-hide z-10">
                 {videos.map((videoSrc, index) => (
                 <div class="video-slide relative w-full h-full snap-start snap-always shrink-0">
                   <video
@@ -54,7 +54,7 @@ const videos = [video1, video2, video3, video5, video6, video7];
     </div>
 
     <!-- Hand Phone Image Overlay (Di Atas Video) -->
-    <div class="absolute inset-0 z-30 pointer-events-none mt-46">
+    <div class="absolute inset-0 z-30 pointer-events-none mt-46 md:mt-60">
       <img 
         src={handPhone} 
         alt="Hand Phone Mockup" 
